--- a/lib/JSTL/CMakeLists.txt
+++ b/lib/JSTL/CMakeLists.txt
@@ -3,5 +3,5 @@
 file(GLOB JSTL_SOURCES "*.cpp")
 add_library(JSTL ${JSTL_SOURCES})
 
-target_include_directories(JSTL PUBLIC ${CMAKE_SOURCE_DIR}/include/JSTL)
+target_include_directories(JSTL PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_compile_options(JSTL PRIVATE -Wall -Werror)
